--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
+    "@tomtom-international/web-sdk-services": "^6.25.0",
     "@vee-validate/yup": "^4.12.2",
     "axios": "^1.6.2",
     "localforage": "^1.10.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.2",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.3.67",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.10.3",
     "@vitejs/plugin-vue": "^4.5.0",
     "sass": "^1.69.5",
