--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
+    "allowSyntheticDefaultImports": true,
     "lib": [
       "ES2020",
       "DOM",
