--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.2",
     "vue": "^3.3.8",
+    "vue-carousel": "^0.18.0",
     "vue-cropperjs": "^5.0.0",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
