--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build --base=/farm/",
+    "build": "vite build --base=/farm/",
     "preview": "vite preview"
   },
   "dependencies": {
