--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,10 @@
     "jsx": "preserve",
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+
   },
   "include": [
     "src/**/*.ts",
